--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       color: #b3b3b3;
     }
     p {
+      text-align: center;
       font-size: 1.1rem;
       line-height: 1.6;
     }
@@ -116,7 +117,6 @@
 
     <section>
       <h2>Kontakt</h2>
-      <p> <a href="https://www.instagram.com/tobsxnn/" style="color:lightblue">Instagram</a>
       <p> <a href="https://discord.gg/23U8kMRN" style="color:lightblue">Discord</a> 
     </section>
   </main>
